# ComfyUI_FaceAlignPaste

./: .gitignore  LICENSE  README.md  __init__.py  face_align_node.py  face_align_single.py  face_autofit_double.py  face_autofit_single.py  gender_recognition_node.py  node_config.json  prompt_selector.py  pyproject.toml  requirements.txt  rotate_node.py
utils/: __init__.py  face_detection.py  image_processing.py  logging_utils.py  person_params.py
